// Copyright 2017 Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package="protocol";

service ServiceMeshMetricService {
    rpc collect(stream ServiceMeshMetric) returns (MeshProbeDownstream) {
    }
}

message ServiceMeshMetric {
    int64 startTime = 1;
    int64 endTime = 2;
    string sourceServiceName = 3;
    int32 sourceServiceId = 4;
    string sourceServiceInstance = 5;
    int32 sourceServiceInstanceId = 6;
    string destServiceName = 7;
    int32 destServiceId = 8;
    string destServiceInstance = 9;
    int32 destServiceInstanceId = 10;
    string endpoint = 11;
    int32 latency = 12;
    int32 responseCode = 13;
    bool status = 14;
    Protocol protocol = 15;
    DetectPoint detectPoint = 16;
}

enum Protocol {
    HTTP = 0;
    gRPC = 1;
}

enum DetectPoint {
    client = 0;
    server = 1;
    proxy = 2;
}

message MeshProbeDownstream {
}
